--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="project-list">
         <h2>My projects</h2>
         <ul>
-            <li><a href="/files/base.rar" download> Group project: Recreation center "Quiet Coast" (RUS)</a></li>
+            <li><a href="https://ikasider.github.io/quiet-coast/"> Group project: Recreation center "Quiet Coast" (RUS)</a></li>
             <li><a href="project2.html">Project 2</a></li>
             <li><a href="project3.html">Project 3</a></li>
         </ul>
