--- a/index.html
+++ b/index.html
@@ -3,33 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-</style>
 <body>
+    <button id="languages">HE</button>
+
     <div class="header">
-        <h1>My Portfolio</h1>
-        <h3>Hello and welcome to my portfolio page. Here you can find some of my projects and works.</h3>
-        <h4>My name is Ilya. I'm beginner programmer and I look for first orders.</h4>
+        <h1 data-en="My Portfolio" data-he="תיק העבודות שלי">My Portfolio</h1>
+        <h3 data-en="Hello and welcome to my portfolio page. Here you can find some of my projects and works."
+            data-he="שלום וברוכים הבאים לדף התיק שלי. כאן תוכלו למצוא כמה מהפרויקטים והעבודות שלי.">
+            Hello and welcome to my portfolio page. Here you can find some of my projects and works.
+        </h3>
+        <h4 data-en="My name is Ilya. I'm beginner programmer and I look for first orders."
+            data-he="שמי איליה. אני מתכנת מתחיל ואני מחפש הזמנות ראשונות.">
+            My name is Ilya. I'm beginner programmer and I look for first orders.
+        </h4>
     </div>
+
     <div class="project-list">
-        <h2>My projects</h2>
+        <h2 data-en="My Projects" data-he="הפרויקטים שלי">My Projects</h2>
         <ul>
-            <li><a href="https://ikasider.github.io/quiet-coast/"> Group project: Recreation center "Quiet Coast" (RUS)</a></li>
-            <li><a href="project2.html">Project 2</a></li>
-            <li><a href="project3.html">Project 3</a></li>
+            <li><a data-en='Group project: Recreation center "Quiet Coast" (RUS)' data-he='פרויקט קבוצתי: מרכז נופש "חוף שקט" (רוסית)' href="/files/base.rar" download>Group project: Recreation center "Quiet Coast" (RUS)</a></li>
+            <li><a data-en="Project 2" data-he="פרויקט 2" href="project2.html">Project 2</a></li>
+            <li><a data-en="Project 3" data-he="פרויקט 3" href="project3.html">Project 3</a></li>
         </ul>
     </div>
+
     <div class="about">
-        <h2>About Me</h2>
-        <h4>I am a beginner programmer with a passion for coding and problem-solving. I enjoy working on projects that challenge my skills and allow me to learn new technologies.</h4>
-        <h4>In my free time, I like to explore new programming languages and frameworks, and I am always looking for opportunities to improve my skills.</h4>
+        <h2 data-en="About Me" data-he="עליי">About Me</h2>
+        <h4 data-en="I am a beginner programmer with a passion for coding and problem-solving. I enjoy working on projects that challenge my skills and allow me to learn new technologies."
+            data-he="אני מתכנת מתחיל עם תשוקה לקוד ולפתרון בעיות. אני נהנה לעבוד על פרויקטים שמאתגרים אותי ומלמדים אותי טכנולוגיות חדשות.">
+            I am a beginner programmer with a passion for coding and problem-solving. I enjoy working on projects that challenge my skills and allow me to learn new technologies.
+        </h4>
+        <h4 data-en="In my free time, I like to explore new programming languages and frameworks, and I am always looking for opportunities to improve my skills."
+            data-he="בזמני הפנוי אני אוהב ללמוד שפות תכנות חדשות ומסגרות עבודה, ותמיד מחפש דרכים להשתפר.">
+            In my free time, I like to explore new programming languages and frameworks, and I am always looking for opportunities to improve my skills.
+        </h4>
     </div>
+
     <div class="skills">
-        <h2>Skills</h2>
+        <h2 data-en="Skills" data-he="כישורים">Skills</h2>
         <ul>
             <li>
                 <div>HTML</div>
@@ -57,10 +74,64 @@
             </li>
         </ul>
     </div>
+
     <div class="contact">
-        <h2>Contact Me</h2>
-        <h4>If you would like to get in touch, please email me at <a href="mailto:ilyawoodyru@gmail.com">ilyawoodyru@gmail.com</a>.</h4>
+        <h2 data-en="Contact Me" data-he="צור קשר">Contact Me</h2>
+        <h4>
+            <span
+                data-en="If you would like to get in touch, please email me at"
+                data-he="אם תרצה ליצור קשר, שלח לי מייל בכתובת"
+            >
+                If you would like to get in touch, please email me at
+            </span>
+            <a href="mailto:ilyawoodyru@gmail.com">ilyawoodyru@gmail.com</a>.
+        </h4>
+
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        function isInViewport(el) {
+            const rect = el.getBoundingClientRect();
+            return (
+            rect.top < window.innerHeight && rect.bottom >= 0
+            );
+        }
+
+        function animateProgressBars() {
+            document.querySelectorAll('.progress').forEach(progress => {
+                if (isInViewport(progress) && !progress.classList.contains('animated')) {
+                    const target = progress.getAttribute('data-percent');
+                    progress.style.width = target;
+                    progress.classList.add('animated');
+                }
+            });
+        }
+
+        window.addEventListener('scroll', animateProgressBars);
+        window.addEventListener('load', animateProgressBars);
+
+        let currentLang = 'en';
+
+        document.getElementById('languages').addEventListener('click', () => {
+            currentLang = currentLang === 'en' ? 'he' : 'en';
+
+            // Меняем все тексты
+            document.querySelectorAll('[data-en]').forEach(el => {
+                if (el.dataset[currentLang]) {
+                el.textContent = el.dataset[currentLang];
+                }
+            });
+
+        // Обновляем надпись на кнопке
+        document.getElementById('languages').textContent =
+            currentLang === 'en' ? 'HE' : 'EN';
+        });
+
+        document.querySelectorAll('[data-en]').forEach(el => {
+            if (el.dataset[currentLang]) {
+            el.innerHTML = el.dataset[currentLang]; // меняем innerHTML, чтобы работали теги внутри текста
+            }
+        });
+    </script>
 </body>
 </html>
