--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="project-list">
         <h2 data-en="My Projects" data-he="הפרויקטים שלי">My Projects</h2>
         <ul>
-            <li><a data-en='Group project: Recreation center "Quiet Coast" (RUS)' data-he='פרויקט קבוצתי: מרכז נופש "חוף שקט" (רוסית)' href="/files/base.rar" download>Group project: Recreation center "Quiet Coast" (RUS)</a></li>
+            <li><a data-en='Group project: Recreation center "Quiet Coast" (RUS)' data-he='פרויקט קבוצתי: מרכז נופש "חוף שקט" (רוסית)' href="https://ikasider.github.io/quiet-coast/">Group project: Recreation center "Quiet Coast" (RUS)</a></li>
             <li><a data-en="Project 2" data-he="פרויקט 2" href="project2.html">Project 2</a></li>
             <li><a data-en="Project 3" data-he="פרויקט 3" href="project3.html">Project 3</a></li>
         </ul>
