--- a/index2.html
+++ b/index2.html
@@ -29,6 +29,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 1em;
+            
         }
 
         .center-block {
@@ -84,7 +85,7 @@
     <button id="languages">HE</button>
     <div class="center-block">
         <h1 id="text" data-en="The project is under development. It will be ready soon." data-he="הפרויקט נמצא בפיתוח. זה יהיה מוכן בקרוב.">The project is under development. It will be ready soon.</h1>
-        <h2><a href="index.html" id="back">To the portfolio</a></h2>
+        <h2><a href="index.html" id="back" data-en="To the portfolio" data-he="לתיק העבודות">To the portfolio</a></h2>
     </div>
 </body>
 <script>
